2010-08-12  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/45262
	* gcc.c-torture/execute/pr45262.c: New test.

2010-08-12  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.dg/profile-generate-3.c: Call dg-require-profiling with
	empty argument.
	* g++.dg/other/profile1.C: Ditto.

2010-08-12  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45232
	* gcc.dg/tree-ssa/pr44133.c: Adjust warning location.
	* gcc.dg/tree-ssa/loop-7.c: Adjust.
	* gcc.dg/tree-ssa/reassoc-1.c: XFAIL.
	* gcc.dg/tree-ssa/reassoc-20.c: Add reassoc-1.c variant with
	unsigned arithmetic.
	* gcc.dg/tree-ssa/reassoc-14.c: Use unsigned arithmetic.
	* gcc.dg/tree-ssa/reassoc-15.c: Likewise.
	* gcc.dg/tree-ssa/reassoc-18.c: Likewise.
	* gcc.dg/tree-ssa/reassoc-2.c: XFAIL.
	* gcc.dg/tree-ssa/reassoc-21.c: Add reassoc-2.c variant with
	unsigned arithmetic.
	* gcc.dg/tree-ssa/reassoc-6.c: XFAIL.
	* gcc.dg/tree-ssa/reassoc-22.c: Add reassoc-6.c variant with
	unsigned arithmetic.
	* gcc.dg/tree-ssa/reassoc-7.c: Use unsigned arithmetic.
	* gcc.dg/tree-ssa/reassoc-9.c: XFAIL.
	* gcc.dg/tree-ssa/reassoc-23.c: Add reassoc-9.c variant with
	unsigned arithmetic.
	* gcc.dg/tree-ssa/ssa-pre-2.c: Adjust.
	* gcc.dg/tree-ssa/negate.c: Adjust.
	* gcc.dg/vect/vect-1.c: Adjust.
	* gfortran.dg/reassoc_6.f: XFAIL.

2010-08-12  Jakub Jelinek  <jakub@redhat.com>

	PR debug/45259
	* gcc.dg/pr45259.c: New test.

2010-08-12  Wei Guozhi  <carrot@google.com>

	PR target/44999
	* gcc.target/arm/pr44999.c: New testcase.

2010-08-12  Jie Zhang  <jie@codesourcery.com>

	* gcc.dg/graphite/interchange-9.c (M): Define to be 111.
	(N): Likewise.
	(main): Adjust accordingly.

2010-08-11  Sebastian Pop  <sebastian.pop@amd.com>

	* gfortran.dg/graphite/id-22.f: New.

2010-08-11  Sebastian Pop  <sebastian.pop@amd.com>

	* gcc.dg/graphite/id-26.c: New.

2010-08-11  Sebastian Pop  <sebastian.pop@amd.com>

	* gcc.dg/graphite/id-25.c: New.

2010-08-11  Sebastian Pop  <sebastian.pop@amd.com>

	* gcc.dg/graphite/run-id-5.c: New.