@@ -1,3 +1,10 @@
+2010-08-12  Uros Bizjak  <ubizjak@gmail.com>
+
+	* gcc.target/i386/pr40906-1.c: Add -fno-asynchronous-unwind-tables
+	to dg-options.
+	* gcc.target/i386/pr40906-2.c: Ditto.
+	* gcc.target/i386/pr40906-3.c: Ditto.
+
 2010-08-12  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/45262
